<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chillara</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_trans">Add</string>
    <string name="non_content">No Contents</string>
    <string name="search_contact">Search Contact</string>
    <string name="title_activity_add_trans">New Transaction</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="save">Save</string>
    <string name="trans_amount_hint">Amount</string>
    <string name="rs">Rs</string>
    <string name="label_name">Name</string>
    <string name="label_amount">Amount</string>
    <string name="label_type">Type</string>
    <string name="chillara">Chillara</string><string name="all">All</string><string name="summary">Summary</string><string name="total_transactions">Total Transactions</string><string name="total_credit_amount">Total Credit Amount</string><string name="total_debit_amount">Total Debit Amount</string><string name="by_user">By User</string><string name="label_description">Description</string><string name="add_trans_category">Category</string><string name="category">Category</string><string name="amount">Amount</string><string name="date">Date</string><string name="cancel">Cancel</string><string name="new_category">New Category</string><string name="date_and_description">Date And Description</string><string name="description">Description</string>
</resources>