<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/header_gradient"
            android:id="@+id/linearLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/chillara"
                android:layout_alignParentStart="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentTop="false"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:layout_weight="1"/>

    </LinearLayout>

    <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_details_table"
            android:layout_below="@+id/linearLayout"
            >

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Medium Text"
                    android:id="@+id/trans_details_user_name"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/total_credit_amount"
                    android:id="@id/trans_list_label_credit"
                    android:paddingRight="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/total_credit_value"/>
        </TableRow>

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/tableRow"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/total_debit_amount"
                    android:id="@+id/textView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Large Text"
                    android:id="@+id/total_debit_amount"/>
        </TableRow>

    </TableLayout>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trans_list_for_user_view"
            android:layout_below="@id/user_details_table"/>

</RelativeLayout>